feat: replace Real X-Z with interactive Real 3D map